seperated to executer and action repo

--- a/examples/weather/config.json
+++ b/examples/weather/config.json
@@ -1,6 +1,4 @@
 {
-  "config": {
-    "apiKey": "ba9f19affad8428980ee3a66462295a9",
-    "unitSys": "metric"
-  }
+  "API_KEY": "ba9f19affad8428980ee3a66462295a9",
+  "DEFAULT_UNIT_SYS": "metric"
 }
